feat: Added sorting functionality
Files may be sorted into music, video, any, or custom.

Custom selection allows typing in file the desired formats into a textfield.

Many internal changes were made to simplify the project.